--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
             const onChangeMinutes = (event) => {
                 setMinutes(event.target.value);
             }
-            const [hours, setHours] = React.useState();
-            const onChangeHours = (event) => {
-                setHours(event.target.value);
-            }
+            const reset = () => {setMinutes(0);}
             return (
                 <div>
-                    <h1>Super Converter</h1>
-                    <label htmlFor="minutes">Minutes</label>
-                    <input value={minutes} id="minutes" placeholder="Minutes" type="number" onChange={onChangeMinutes}/>
-                    <h4>You want to convert {minutes}</h4>
-                    <label htmlFor="hours">Hours</label>
-                    <input value={hours} id="hours" placeholder="Hours" type="number" onChange={onChangeHours}/>
-                    <h4>You wnat to convert {hours}</h4>
+                    <div>
+                        <h1>Super Converter</h1>
+                        <label htmlFor="minutes">Minutes</label>
+                        <input value={minutes} id="minutes" placeholder="Minutes" type="number" onChange={onChangeMinutes}/>
+                    </div>
+                    <div>
+                        <label htmlFor="hours">Hours</label>
+                        <input value={Math.round(minutes/60)} id="hours" placeholder="Hours" type="number"/>
+                    </div>
+                    <button onClick={reset}>Reset</button>
                 </div>
             )
         }
